force-app/main/default/objects/Partner_Margin_Product__c/Partner_Margin_Product__c.object-meta.xml
<CustomObject>
    <label>Partner Margin Product</label>
    <nameField>
        <label>Partner Margin Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Margin Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>