force-app/main/default/objects/Partner_Margin_Product__c/fields/ARR_Opp_Product_Original__c.field-meta.xml
<CustomField>
    <fullName>ARR_Opp_Product_Original__c</fullName>
    <label>ARR (Opp Product) (Original)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>