force-app/main/default/objects/Partner_Margin_Product__c/fields/ARR_Product__c.field-meta.xml
<CustomField>
    <fullName>ARR_Product__c</fullName>
    <formula>ARR_Opp_Product_Original__c  /  Quantity_Original__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR (Product)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>