force-app/main/default/objects/Partner_Margin_Product__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>IF( ISPICKVAL( Partner_Margin__r.Partner_Margin_Type__c , &apos;Initial Purchase&apos;), Opportunity_Product__r.Customer_Discount__c ,0.00 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>