force-app/main/default/objects/Partner_Margin_Product__c/fields/Licensing__c.field-meta.xml
<CustomField>
    <fullName>Licensing__c</fullName>
    <label>Licensing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>