force-app/main/default/objects/Partner_Margin_Product__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Partner Margin Products</relationshipLabel>
    <relationshipName>Partner_Margin_Products</relationshipName>
    <type>Lookup</type>
</CustomField>