force-app/main/default/objects/Partner_Margin_Product__c/fields/Partial_Partner_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Partial_Partner_Quantity__c</fullName>
    <label>Partial Partner Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>