force-app/main/default/objects/Partner_Margin_Product__c/fields/Partner_Margin__c.field-meta.xml
<CustomField>
    <fullName>Partner_Margin__c</fullName>
    <label>Partner Margin</label>
    <referenceTo>Partner_Margin__c</referenceTo>
    <relationshipLabel>Partner Margin Products</relationshipLabel>
    <relationshipName>Partner_Margin_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>