force-app/main/default/objects/Partner_Margin_Product__c/fields/Partner_Margin_Parner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Margin_Parner_ID__c</fullName>
    <displayFormat>PMP-{00000}</displayFormat>
    <label>Partner Margin Parner ID</label>
    <type>AutoNumber</type>
</CustomField>