force-app/main/default/objects/Partner_Margin_Product__c/fields/Perpetual_Type__c.field-meta.xml
<CustomField>
    <fullName>Perpetual_Type__c</fullName>
    <label>Perpetual Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>