force-app/main/default/objects/Partner_Margin_Product__c/fields/Quantity_Original__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Original__c</fullName>
    <label>Quantity (Original)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>