force-app/main/default/objects/Partner_Margin_Product__c/fields/Total_Price_Original__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Original__c</fullName>
    <label>Total Price (Original)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>