force-app/main/default/objects/Partner_Margin_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Partner_Margin__c</columns>
    <columns>NAME</columns>
    <columns>Total_Price__c</columns>
    <columns>Total_Price_Original__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Licensing__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/4/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>MFC user</value>
    </filters>
    <label>All</label>
</ListView>